--- a/module/Products/view/products/error/404.phtml
+++ b/module/Products/view/products/error/404.phtml
@@ -1,3 +1,6 @@
+<?php
+    $this->headLink()->appendStylesheet( $this->basePath('/css/error.css') );
+?>
 <h1><?php echo $this->translate('Vi har letat överallt!') ?></h1>
 
 <div class="container fullsize">
@@ -7,7 +10,7 @@
     <div class="image">
         <img src="<?php echo $this->basePath('/img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
         <div class="carousel">
-            <img src="<?php echo $this->basePath('/img/ui/icons/404.svg'); ?>" alt="404" class="error focus fade-in">
+            <img src="<?php echo $this->basePath('/img/ui/icons/404_product.svg'); ?>" alt="404" class="error focus fade-in">
         </div>
     </div>
     <div class="content">
