--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1787,7 +1787,7 @@ h2 {
         transition: all 500ms ease-in-out;
     
         width: 80%;
-        left: 80%;
+        left: -80%;
     }
 
     #sidebar.maximized {
@@ -2071,6 +2071,10 @@ h2 {
 }
 
 #sidebar ul, #sidebar li {
+    transition: border 400ms ease-in-out;
+    font-smoothing: subpixel-antialiased;
+    transform: translate3d(0,0,0) translateZ(0);
+    
     list-style: none;
     list-style-type: none;
     
@@ -2081,15 +2085,19 @@ h2 {
     font-weight: normal;
 }
 
-#sidebar li {
-    transition: all 400ms ease-in-out;
-    margin: 6px 0px;
-}
-
 #sidebar ul {
     height: calc( 100% - 56px );
     margin: 0px;
     padding: 0px;
+    
+    overflow: auto;
+}
+
+#sidebar li {
+    margin: 6px 0px;
+}
+
+#sidebar ul li.active {
 }
 
 #sidebar ul a {
@@ -2111,12 +2119,41 @@ h2 {
     font-size: 1.5em;
 }
 
+#sidebar ul a div {
+    display: none;
+}
+
+#sidebar ul a.has_children div {
+    display: inline-block;
+    height: 16px;
+    width: 12px;
+    
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    
+    margin-left: 2px;
+    padding: 8px 0px 0px 0px;
+    
+    background-image: url('../img/ui/icons/right_arrow_gray.svg');
+    background-repeat: no-repeat;
+    background-size: 8px 8px;
+    background-position: top left;
+}
+
 #sidebar ul a:hover {
     
     padding-left: 35px;
     
     color: #000;
-    background: rgba(2, 144, 208,0.5);
+    background-color: rgba(2, 144, 208,0.5);
+}
+
+#sidebar ul a.has_children:hover div {
+    background-image: url('../img/ui/icons/right_arrow.svg');
+}
+
+#sidebar ul.child {
+    display: none;
 }
 
 #sidebar .content[data-tab=search] .elements {
@@ -2156,6 +2193,43 @@ h2 {
     line-height: 16px;
     
     outline: 0;
+}
+
+#sidebar .submenu {
+    transition: all 250ms ease-in-out;
+    
+    display: block;
+    width: 100%;
+    height: 100%;
+    
+    margin: 0px;
+    padding: 0px;
+    border-right: 1px solid black;
+    
+    position: absolute;
+    top: 0px;
+    left: -100%;
+    
+    background-color: rgba(255,255,255,1.0);
+    
+    box-shadow: 2px 0px 4px rgba(0,0,0,0.45);
+    -moz-box-shadow: 2px 0px 4px rgba(0,0,0,0.45);
+    -webkit-box-shadow: 2px 0px 4px rgba(0,0,0,0.45);
+    -o-box-shadow: 2px 0px 4px rgba(0,0,0,0.45)
+}
+
+#sidebar .submenu.show {
+    display: block;
+    left: 0%;
+}
+
+#sidebar .submenu ul {
+    overflow: auto;
+}
+
+#sidebar .submenu > ul.child {
+    display: block;
+    width: calc( 100% - 12px );
 }
 
 @media (max-width: 1115px) {
