Various ajax stuff, sidebar and working on product pages.

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -68,7 +68,7 @@
                                 </ul>
                             </div>
 
-                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_classic') . PHP_EOL; ?>" title="Roll-Up Classic">Roll-Up Classic</a></h3>
+                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_classic') . PHP_EOL; ?>" title="Roll-Up Classic" class="ajax">Roll-Up Classic</a></h3>
                             <ul class='information'>
                                 <li>
                                     <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
