--- a/module/Application/view/application/menu/partial-category.phtml
+++ b/module/Application/view/application/menu/partial-category.phtml
@@ -9,7 +9,7 @@
     
     <?php if( isset( $category['seo'] ) ): ?>
     <?php else: ?>
-        <?php echo( "<a href='/kategori/".$category['id']."' class='".$class."' data-depth='".$category['depth']."' data-parent-id='".$category['parent']."' data-id='".$category['id']."'><span>".$category['name']."</span><div></div></a>" ) ?>
+        <?php echo( "<a href='/kategori/".$category['id']."' class='".$class."' data-depth='".$category['depth']."' data-parent-id='".$category['parent']."' data-id='".$category['id']."' data-target='#body'><span>".$category['name']."</span><div></div></a>" ) ?>
     <?php endif; ?>
     
     <?php if (isset($category['children'])) : ?>
