--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -24,6 +24,8 @@
                                         ->prependFile( $this->basePath( '/plugins/event.swipe/js/jquery.event.swipe.js' ) )
                                         ->prependFile( $this->basePath( '/plugins/event.move/js/jquery.event.move.js' ) )
                                         ->prependFile( $this->basePath( '/plugins/modernizr/js/modernizr.2.7.0.js' ) )
+                                        ->prependFile( '/js/ajaxHandler.js' )
+                                        ->prependFile( '/plugins/pjax/js/jquery.pjax.js' )
                                         ->prependFile( '//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js' )
                                         ->prependFile( '//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js' )?>
         
