--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1389,10 +1389,10 @@ h2 {
 
 #body .container ul.information,
 #body > ul.information,
-#body > #fadeOut > ul.information,
+#body > * > ul.information,
 #body .container ul.information li,
 #body > ul.information li,
-#body > #fadeOut > ul.information li {
+#body > * > ul.information li {
     list-style: none;
     list-style-type: none;
     
@@ -1409,7 +1409,7 @@ h2 {
 
 #body .container ul.information,
 #body > ul.information,
-#body > #fadeOut > ul.information {
+#body > * > ul.information {
     display: inline-block;
     
     margin: 0;
@@ -1417,31 +1417,31 @@ h2 {
 }
 
 #body > ul.information,
-#body > #fadeOut > ul.information {
+#body > * > ul.information {
     margin-left: 24px;
 }
 
 #body .container ul.information li,
 #body > ul.information li,
-#body > #fadeOut > ul.information li {
+#body > * > ul.information li {
     float: left;
 }
 
 #body .container ul.information li:not(:first-child),
 #body > ul.information li:not(:first-child),
-#body > #fadeOut > ul.information li:not(:first-child) {
+#body > * > ul.information li:not(:first-child) {
     padding-left: 12px;
 }
 
 #body .container ul.information li a,
 #body > ul.information li a,
-#body > #fadeOut > ul.information li a {
+#body > * > ul.information li a {
     color: #666;
 }
 
 #body .container ul.information li a:hover,
 #body > ul.information li a:hover,
-#body > #fadeOut > ul.information li a:hover {
+#body > * > ul.information li a:hover {
     color: rgb(2, 144, 208);
 }
 
