--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -25,7 +25,8 @@
                                         ->prependFile( $this->basePath( '/plugins/event.move/js/jquery.event.move.js' ) )
                                         ->prependFile( $this->basePath( '/plugins/modernizr/js/modernizr.2.7.0.js' ) )
                                         ->prependFile( '/js/ajaxHandler.js' )
-                                        ->prependFile( '/plugins/pjax/js/jquery.pjax.js' )
+                                        ->prependFile( '/plugins/spin/js/jquery.spin.js' )
+                                        ->prependFile( '/plugins/spin/js/spin.js' )
                                         ->prependFile( '//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js' )
                                         ->prependFile( '//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js' )?>
         
@@ -170,7 +171,7 @@
             <div id="header_wrapper">
                 <div id="header_top_wrapper">
                     <div id="header_top">
-                        <a href="<?php echo $this->basePath(''); ?>" title="Speedprint.se">
+                        <a href="<?php echo $this->basePath(''); ?>" title="Speedprint.se" class="ajax">
                             <div class="logo">
                                 <div class="logo_wrapper">
                                     <img src="<?php echo $this->basePath('img/speedprint.se.s.svg'); ?>" class="logo" alt="S">
