--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -2619,6 +2619,26 @@ h2 {
     text-align: right;
 }
 
+
+/***********************************/
+/***           Modals            ***/
+/***********************************/
+
+#page_loading {
+    display: block;
+    height: 268px;
+    width: 268px;
+    
+    margin-top: -134px;
+    margin-left: -134px;
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    
+    z-index: 20000;
+}
+
 a {
     transition: color 350ms ease-in-out;
     color: rgb(217,125,50);
@@ -2633,23 +2653,23 @@ a:hover {
 @-webkit-keyframes pulsate { 0%, 100% { -webkit-transform: scale(1.0); } 50% { -webkit-transform: scale(1.2); } }
 @-moz-keyframes pulsate { 0%, 100% { -moz-transform: scale(1.0); } 50% { -moz-transform: scale(1.2); } }
 
-@keyframes fadeIn { from { opacity:0; left: 25%; } to { opacity:1; left: 0%; } }
 @-webkit-keyframes fadeIn { from { opacity:0; left: 25%; } to { opacity:1; left: 0%; } }
 @-moz-keyframes fadeIn { from { opacity:0; left: 25%; } to { opacity:1; left: 0%; } }
+@keyframes fadeIn { from { opacity:0; left: 25%; } to { opacity:1; left: 0%; } }
 
-@keyframes fadeOut { from { opacity:1; right: 0%; } to { opacity:0; right: 25%; } }
 @-webkit-keyframes fadeOut { from { opacity:1; right: 0%; } to { opacity:0; right: 25%; } }
 @-moz-keyframes fadeOut { from { opacity:1; right: 0%; } to { opacity:0; right: 25%; } }
+@keyframes fadeOut { from { opacity:1; right: 0%; } to { opacity:0; right: 25%; } }
 
 
-@keyframes bounceUp { 0% { top: -3px; } 25% { top: -9px; } 50% { top: -3px; } 75% { top: -6px; } }
-@-webkit-keyframes bounceUp { 0% { top: -3px; } 25% { top: -9px; } 50% { top: -3px; } 75% { top: -6px; } }
-@-moz-keyframes bounceUp { 0% { top: -3px; } 25% { top: -9px; } 50% { top: -3px; } 75% { top: -6px; } }
+@-webkit-keyframes bounceUp { 0% { top: -3px; } 25% { top: -9px; } 50% { top: -3px; } 75%,100% { top: -6px; } }
+@-moz-keyframes bounceUp { 0% { top: -3px; } 25% { top: -9px; } 50% { top: -3px; } 75%,100% { top: -6px; } }
+@keyframes bounceUp { 0% { top: -3px; } 25% { top: -9px; } 50% { top: -3px; } 75%,100% { top: -6px; } }
 
 
-@-webkit-keyframes bounceDown { 0% { top: -3px; } 25% { top: 3px; } 50% { top: -3px; } 75% { top: 0px; } }
-@-moz-keyframes bounceDown { 0% { top: -3px; } 25% { top: 3px; } 50% { top: -3px; } 75% { top: 0px; } }
-@keyframes bounceDown { 0% { top: -3px; } 25% { top: 3px; } 50% { top: -3px; } 75% { top: 0px; } }
+@-webkit-keyframes bounceDown { 0% { top: -3px; } 25% { top: 3px; } 50% { top: -3px; } 75%,100% { top: 0px; } }
+@-moz-keyframes bounceDown { 0% { top: -3px; } 25% { top: 3px; } 50% { top: -3px; } 75%,100% { top: 0px; } }
+@keyframes bounceDown { 0% { top: -3px; } 25% { top: 3px; } 50% { top: -3px; } 75%,100% { top: 0px; } }
 
 
 @-webkit-keyframes fadeToGreen {
@@ -2693,7 +2713,6 @@ a:hover {
 @-moz-keyframes logoRotateBack { 0% { transform: scale(1.0) rotate(0deg); } 100% { transform: scale(1.12) rotate(-2deg); } }
 @keyframes logoRotateBack { 0% { transform: scale(1.0) rotate(0deg); } 100% { transform: scale(1.12) rotate(-2deg); } }
 
-
 @-webkit-keyframes logoSlideOut { 0%,50% { left: -361px; } 100% { left: -15px; } }
 @-moz-keyframes logoSlideOut { 0%,50% { left: -361px; } 100% { left: -15px; } }
 @keyframes logoSlideOut { 0%,50% { left: -361px; } 100% { left: -15px; } }
@@ -2703,8 +2722,6 @@ a:hover {
 }
 
 .fade-in {
-    display: block;
-    position: relative;
     -webkit-animation:fadeIn linear 500ms;
     -moz-animation:fadeIn linear 500ms;
     animation:fadeIn linear 500ms;
@@ -2721,6 +2738,7 @@ a:hover {
 .fade-out {
     display: block;
     position: relative;
+    
     -webkit-animation:fadeOut linear 500ms;
     -moz-animation:fadeOut linear 500ms;
     animation:fadeOut linear 500ms;
@@ -2734,24 +2752,24 @@ a:hover {
     animation-duration:500ms;
 }
 
-.bounceUp {
-    animation: bounceUp 250ms ease-in-out 1;  
-    -webkit-animation: bounceUp 250ms ease-in-out 1;  
+.bounceUp {  
+    -webkit-animation: bounceUp 250ms ease-in-out 1;
+    animation: bounceUp 250ms ease-in-out 1;
 }
 
 .bounceDown {
-    animation: bounceDown 250ms ease-in-out 1; 
     -webkit-animation: bounceDown 250ms ease-in-out 1;
+    animation: bounceDown 250ms ease-in-out 1; 
 }
 
-.fadeToGreen {
-    animation: fadeToRed 250ms ease-in-out 1;  
-    -webkit-animation: fadeToRed 250ms ease-in-out 1;  
+.fadeToGreen {  
+    -webkit-animation: fadeToRed 250ms ease-in-out 1;
+    animation: fadeToRed 250ms ease-in-out 1;
 }
 
-.fadeToRed {
-    animation: fadetoRed 250ms ease-in-out 1; 
+.fadeToRed { 
     -webkit-animation: fadetoRed 250ms ease-in-out 1;
+    animation: fadetoRed 250ms ease-in-out 1;
 }
 
 input.search {
