Various ajax stuff, and fading animations. As well as new database dump.

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -134,7 +134,7 @@
                                 </ul>
                             </div>
 
-                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_professional') . PHP_EOL; ?>" title="Roll-Up Professional">Roll-Up Professional</a></h3>
+                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_professional') . PHP_EOL; ?>" title="Roll-Up Professional" class="ajax">Roll-Up Professional</a></h3>
                             <ul class='information'>
                                 <li>
                                     <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
@@ -198,7 +198,7 @@
                                 </ul>
                             </div>
 
-                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_compact') . PHP_EOL; ?>" title="Roll-Up Compact">Roll-Up Compact</a></h3>
+                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_compact') . PHP_EOL; ?>" title="Roll-Up Compact" class="ajax">Roll-Up Compact</a></h3>
                             <ul class='information'>
                                 <li>
                                     <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
@@ -259,7 +259,7 @@
                                 </ul>
                             </div>
 
-                            <h3><a href="<?php echo $this->basePath('/produkter/case_and_counter') . PHP_EOL; ?>" title="Case &amp; Counter">Case &amp; Counter</a></h3>
+                            <h3><a href="<?php echo $this->basePath('/produkter/case_and_counter') . PHP_EOL; ?>" title="Case &amp; Counter" class="ajax">Case &amp; Counter</a></h3>
                             <ul class='information'>
                                 <li>
                                     <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
